tests/fixtures/invalid/int_lshift_bytes.py
# Cannot left shift Int and Bytes
x: int = 1 << b"hello"
